# platform.core.connectivity.net-popup

./: .gitignore  AUTHORS  CMakeLists.txt  NOTICE  net.netpopup.efl  net.netpopup.manifest  net.netpopup.rule  org.tizen.net-popup.manifest  org.tizen.net-popup.rule  project.config
data/: net.netpopup.desktop.in  net.netpopup.xml
debian/: changelog  control  net.netpopup.install.in  org.tizen.net-popup.install.in  rules
edcs/: netpopup-custom.edc
include/: net-popup-strings.h  net-popup.h
packaging/: net.netpopup.spec  org.tizen.net-popup.spec
po/: CMakeLists.txt  POTFILES.in  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  (+18 more)
resources/: net.netpopup.xml  org.tizen.net-popup.xml
src/: net-popup.c
